--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@
 				</div>
 				<div id="main-navigation" class="collapse navbar-collapse">
 					<ul id="menu-default-top-menu" class="nav navbar-nav">
-						<li id="menu-item-4301" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4301"><a title="Новости и обновления" href="https://aweizy.github.io/posts/">Новости и обновления</a></li>
+						<li id="menu-item-4301" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4301"><a title="Новости и обновления" href="https://aweizy.github.io/posts.html/">Новости и обновления</a></li>
 						<li id="menu-item-4302" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4302"><a title="Правила сервера" href="https://aweizy.github.io/rules">Правила сервера</a></li>
 						<li id="menu-item-4304" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4304"><a title="Справка" href="https://aweizy.github.io/help">Справка</a></li>
 					</ul>
