--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru-RU" prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article#">
 <head>
-	<title>LAVA 1.19 — Игровые сервера Minecraft</title>
+	<title>Aweizy - Приватный ванильный сервер Minecraft</title>
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//s.w.org">
 	<link rel="alternate" type="application/rss+xml" title="Aweizy 1.16 » Лента" href="https://lava.win/feed/">
@@ -1371,9 +1371,9 @@
 				</div>
 				<div id="main-navigation" class="collapse navbar-collapse">
 					<ul id="menu-default-top-menu" class="nav navbar-nav">
-						<li id="menu-item-4301" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4301"><a title="Новости и обновления" href="https://aweizy.github.io/posts.html/">Новости и обновления</a></li>
-						<li id="menu-item-4302" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4302"><a title="Правила сервера" href="https://aweizy.github.io/rules">Правила сервера</a></li>
-						<li id="menu-item-4304" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4304"><a title="Справка" href="https://aweizy.github.io/help">Справка</a></li>
+						<li id="menu-item-4301" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4301"><a title="Новости и обновления" href="/posts.html">Новости и обновления</a></li>
+						<li id="menu-item-4302" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4302"><a title="Правила сервера" href="https://aweizy.github.io/rules.html">Правила сервера</a></li>
+						<li id="menu-item-4304" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4304"><a title="Справка" href="https://aweizy.github.io/help.html">Справка</a></li>
 					</ul>
 				</div>
 			</div>
