--- a/index.html
+++ b/index.html
@@ -911,9 +911,9 @@
 									<h6 class="category"><a href="https://lava.win/category/news/" title="View all posts in Новости" rel="tag">Новости</a> </h6>
 									<h4 class="card-title entry-title">
 										<a class="blog-item-title-link" href="https://lava.win/news/1.19.4" title="Обновление торговой площадки и версии сервера" rel="bookmark">
-											Обновление торговой площадки и версии сервера							</a>
+																		</a>
 									</h4>
-									<p class="card-description">Сервер обновлен до версии 1.19.4 — эта версия уже была доступна для подключения, но сервер работал на версии 1.19.3.Для подключения доступны версии 1.19.1 — 1.19.4; Обновлена торговая площадка /ah Добавлены категории предметов Распределение предметов по<a class="moretag" href="https://lava.win/news/1.19.4"> Подробнее...…</a></p>
+									<p class="card-description"><a class="moretag" href="https://lava.win/news/1.19.4"> </a></p>
 								</div>
 							</div>
 						</article>
@@ -923,9 +923,9 @@
 									<h6 class="category"><a href="https://lava.win/category/news/" title="View all posts in Новости" rel="tag">Новости</a> </h6>
 									<h4 class="card-title entry-title">
 										<a class="blog-item-title-link" href="https://lava.win/news/1.19.3" title="Обновление Minecraft 1.19.3" rel="bookmark">
-											Обновление Minecraft 1.19.3							</a>
+																	</a>
 									</h4>
-									<p class="card-description">Сервер обновлён до версии 1.19.3; для подключения доступны только клиенты версии 1.19.3. Обсуждение обновления проходит в Discord сервере LAVA.</p>
+									<p class="card-description"></p>
 								</div>
 							</div>
 						</article>
@@ -935,9 +935,9 @@
 									<h6 class="category"><a href="https://lava.win/category/news/" title="View all posts in Новости" rel="tag">Новости</a> </h6>
 									<h4 class="card-title entry-title">
 										<a class="blog-item-title-link" href="https://lava.win/news/1.19.2" title="Обновление Minecraft 1.19.2" rel="bookmark">
-											Обновление Minecraft 1.19.2							</a>
+																		</a>
 									</h4>
-									<p class="card-description">Сервер обновлён до версии 1.19.2; для подключения доступны только клиенты версии 1.19.2. Обсуждение обновления проходит в Discord сервере LAVA.</p>
+									<p class="card-description"></p>
 								</div>
 							</div>
 						</article>
