--- a/index.html
+++ b/index.html
@@ -832,8 +832,8 @@
 				<div id="main-navigation" class="collapse navbar-collapse">
 					<ul id="menu-default-top-menu" class="nav navbar-nav">
 						<li id="menu-item-4301" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4301"><a title="Новости и обновления" href="/posts.html">Новости и обновления</a></li>
-						<li id="menu-item-4302" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4302"><a title="Правила сервера" href="https://aweizy.github.io/rules.html">Правила сервера</a></li>
-						<li id="menu-item-4304" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4304"><a title="Справка" href="https://aweizy.github.io/help.html">Справка</a></li>
+						<li id="menu-item-4302" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4302"><a title="Правила сервера" href="/rules.html">Правила сервера</a></li>
+						<li id="menu-item-4304" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4304"><a title="Справка" href="/help.html">Справка</a></li>
 					</ul>
 				</div>
 			</div>
