--- a/rules.html
+++ b/rules.html
@@ -2706,28 +2706,28 @@
                         <li><strong>за пределами игры:</strong> Discord сервер.</li>
                     </ul>
 
-                    <h3 id="htoc-5-2-discord">3. Модерация глобального и личного чата, а также каналов Discord.</h3>
+                    <h3 id="htoc-5-2-discord">3. Модерация глобального и личного чата, а также каналов Discord</h3>
                     <p><strong>Глобальный чат</strong>
                         <br>Действия, описанные в разделе 3.2, осуществленные в глобальном чате сервера или в любом из каналов Discord, приведут к полной блокировке профиля.</p>
 
                     <p><strong>Личные чаты</strong>
                         <br>Личные чаты не просматриваются администраторами и модерируются аналогично глобальному по обращению игроков, ставших непосредственными свидетелями действий, описанных в разделе 3.2.</p>
 
-                    <h2 id="htoc-6">6. Игровая активность</h2>
+                    <h2 id="htoc-6">4. Игровая активность</h2>
 
                     <p><strong>Игровая активность — это действия, выполненные в игровом мире игровыми персонажами под контролем игроков.</strong></p>
 
-                    <h3 id="htoc-6-1">6.1. Взаимодействие между игроками</h3>
+                    <h3 id="htoc-6-1">4.1. Взаимодействие между игроками</h3>
 
                     <p>
-                        <mark><strong>Запрещены</strong></mark> действия, направленные на деструктивное вмешательство в игровой процесс другого игрока, выполненные без согласия такого игрока или путем введения его в заблуждение.</p>
+                        <mark><strong>Запрещены</strong></mark> действия, направленные на деструктивное вмешательство в игровой процесс другого игрока, выполненные без согласия такого игрока или путем введения его в заблуждение. Это может быть кража общих ресурсов, убийство, другие способы вмешательства. </p>
 
-                    <h3 id="htoc-6-2-pvp">6.2. Система PvP</h3>
+                    <h3 id="htoc-6-2-pvp">4.2. Территории</h3>
 
-                    <p><strong><mark>Запрещено</mark></strong> прямое или косвенное нанесение физического урона игровым персонажам и дружественным им мобам в том случае, если у одного из игроков отключен PvP режим.</p>
+                    <p><strong><mark>Занятой территорией</mark></strong> является та область игрового мира, которая обозначена соответствующией табличкой, на которой есть никнейм игрока, которому принадлежит территория. Пожалуйста, не занимайте территории рядом с занятыми, чтобы избежать споров.</p>
 
-                    <h3 id="htoc-6-3">6.3. Создание искусственных объектов</h3>
-
+                    <h3 id="htoc-6-3">4.3. Создание искусственных объектов</h3>
+                    <p>Искусственным объектом является постройка, созданная игроком(-ами).</p>
                     <p>
                         <mark><strong>Запрещено</strong></mark> создание искусственных объектов, которые:</p>
 
@@ -2739,48 +2739,17 @@
 
                     <p><strong>Искусственный объект принадлежит игроку, который его создал</strong>, или группе игроков, принимавших участие в его создании.</p>
 
-                    <h3 id="htoc-6-4">6.4. Механизмы</h3>
+                    <h3 id="htoc-6-4">4.3. Механизмы</h3>
 
                     <p>В случае, если механизм, в т.ч. использующий <a href="https://minecraft-ru.gamepedia.com/%D0%91%D0%BB%D0%BE%D0%BA-%D1%81%D1%83%D1%89%D0%BD%D0%BE%D1%81%D1%82%D1%8C">блоки-сущности</a>, в процессе своей работы требует значительно больше вычислительных мощностей сервера, нежели остальные созданные механизмы в игровом мире, такой механизм может быть удален из игрового мира, в том числе без предварительного уведомления его владельца, если уведомление невозможно или удаление требуется незамедлительно.</p>
 
-                    <h3 id="htoc-6-5">6.5. Торговая площадка</h3>
+                    <h3 id="htoc-6-5">4.4. Торговая зона</h3>
 
-                    <p><strong>Торговая площадка — это </strong>функционал сервера, доступный через команду <code>/ah</code>.</p>
+                    <p><strong>Торговая зона — это </strong> территория на спавне и в других местах (города, другие территории), на которых игроки могут продавать различные вещи - блоки, предметы, зачарованные книги, экпировку и так далее.</p>
+                    <p>Ставить цену на свой товар может самостоятельно, опираясь на ситуацию на сервере.<strong><mark>Запрещено ставить слишком низкую или высокую цену товару.</mark></strong></p>
+                    <p>Пользователи не ограничены в выборе оформления для своего магазина. Требуется соблюдение правила 4.3.</p>
 
-                    <p><strong><mark>Запрещено</mark></strong> использование системы игрового аукциона и/или магазинов для публичного размещения переименованных предметов, большого количества однотипных предметов, не несущих значимой ценности с точки зрения игровой экономики, использование этих систем не по прямому назначению, включая:</p>
-
-                    <ol>
-                        <li>размещение предметов с целью их хранения, а не продажи;</li>
-                        <li>размещение предметов с целью публикации какой-либо рекламной информации в названии предмета или его содержании.</li>
-                    </ol>
-
-                    <p>Покупки и продажи на торговой площадке, осуществленные в результате ошибочных действий игрока-покупателя, игрока-продавца или технических проблем на стороне сервера,
-                        <mark><strong>могут быть отменены</strong></mark>.</p>
-
-                    <h3 id="htoc-6-6">6.6. Использование игровой валюты и транзакции между игроками</h3>
-
-                    <p><strong><mark>Запрещены</mark></strong> действия, направленные на получение игровой валюты от других игроков путем введения их в заблуждение касаемо последствий передачи игровой валюты.</p>
-
-                    <p>Транзакции между игроками, осуществленные в результате ошибки игрока-отправителя,
-                        <mark><strong>могут быть отменены</strong></mark> при наличии технической возможности отмены осуществленных действий с использованием игровой валюты игроком-получателем.</p>
-
-                    <h3 id="htoc-6-7">6.7. Передача и обмен игровыми предметами между игроками</h3>
-
-                    <p><strong><mark>Не являются спорными ситуации,</mark></strong> связанные с прямой передачей предметов одного игрока другому, осуществленной в том числе путем перемещения предметов в игровой мир.
-                        <br>Для избежания спорных ситуаций игрокам необходимо использовать торговую площадку, доступную по команде <code>/ah</code>.</p>
-
-                    <p><strong><mark>Запрещено</mark></strong> проведение <strong>массовых безвозмездных</strong> раздач предметов.</p>
-
-                    <p><strong>В случае смерти игрового персонажа все предметы из его инвентаря считаются <mark>утраченными</mark> без возможности их восстановления</strong>, кроме случаев, когда смерть игрового персонажа спровоцирована нарушающими правила действиями других игроков.
-                        <br><strong>Такие предметы могут быть использованы <mark>любыми игроками</mark> без каких-либо ограничений.</strong></p>
-
-                    <p>В случае подтвержденного факта утери предметов из-за технических проблем на стороне сервера предметы могут быть восстановлены при наличии возможности достоверно отследить и отменить последствия их использования другими игроками.</p>
-
-                    <h3 id="htoc-6-8-afk">6.8. Система AFK</h3>
-
-                    <p><strong><mark>Запрещено</mark></strong> любое воспрепятствование работы системы AFK, в том числе автоматическая имитация активности игрового персонажа.</p>
-
-                    <h3 id="htoc-6-9">6.9. Внеигровое взаимодействие между игроками и взаимодействие, не предусмотренное технически игровым сервером</h3>
+                    <h3 id="htoc-6-9">4.5. Внеигровое взаимодействие между игроками и взаимодействие, не предусмотренное технически игровым сервером</h3>
 
                     <p>В некоторых ситуациях между игроками возможны разногласия, возникающие на основе взаимодействия между игроками за пределами игры, или на основе взаимодействия, не поддающегося последующей достоверной оценке в виду технических ограничений или самой сути взаимодействия.</p>
 
@@ -2795,7 +2764,7 @@
                         <li><em>конфликтные ситуации, возникшие в результате нарушения одной из сторон конфликта «договоренностей» между ними, при условии, что объект договоренности не может быть оценен достоверно </em>— <strong>не разрешаются</strong> в пользу какого-либо игрока в виду отсутствия возможности достоверной оценки объекта договоренности.</li>
                     </ul>
 
-                    <h3 id="htoc-6-10">6.10. Прочая игровая активность</h3>
+                    <h3 id="htoc-6-10">4.5. Прочая игровая активность</h3>
 
                     <p>Действия, последствия которых нарушают корректную работу сервера и его функционала, <strong><mark>являются</mark></strong> основанием для применения ограничений к игроку их спровоцировавшему.</p>
 
