--- a/posts.html
+++ b/posts.html
@@ -857,7 +857,7 @@
     <footer class="footer footer-black footer-big">
       <div class="container">
         <div class="hestia-bottom-footer-content">					<div class="copyright pull-right">
-          © 2021 Kadeluxe			</div>
+          © 2023 <a href="https://divided.shuoki.top/">realdivided</a>			</div>
         </div>			</div>
     </footer>
   </div>
