--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 			<div class="container">
 				<div class="hestia-bottom-footer-content">
 					<div class="copyright pull-right">
-						© 2023 <a href="https://divided.shuoki.top/">realdivided</a> </div>
+					Версия сайта - 0.1.1	© 2023 <a href="https://divided.shuoki.top/">realdivided</a> </div>
 				</div>
 			</div>
 		</footer>
