--- a/posts.html
+++ b/posts.html
@@ -2,8 +2,11 @@
 <html lang="ru-RU" prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article#">
 
 <head>
+  <meta charset='UTF-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="profile" href="http://gmpg.org/xfn/11">
   <title>Посты &#8212; Aweizy 1.16</title>
+  <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
   <link rel='dns-prefetch' href='//s.w.org' />
   <link rel="alternate" type="application/rss+xml" title="Aweizy 1.16 &raquo; Лента" href="https://lava.win/feed/" />
@@ -854,7 +857,7 @@
     <footer class="footer footer-black footer-big">
       <div class="container">
         <div class="hestia-bottom-footer-content">					<div class="copyright pull-right">
-          © 2021 Kadeluxe			</div>
+          © 2023 <a href="https://divided.shuoki.top/">realdivided</a>		</div>
         </div>			</div>
     </footer>
   </div>
