--- a/help/gameplay.html
+++ b/help/gameplay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
-    <title>Особенности игрового процесса | LAVA: справка</title>
+    <title>Особенности игрового процесса | Aweizy: справка</title>
     <link rel="preload" href="../css/fcb4768e.css" as="style">
     <link rel="stylesheet" href="../css/fcb4768e.css">
 </head>
