--- a/help/gameplay.html
+++ b/help/gameplay.html
@@ -39,9 +39,12 @@
                 <br>
                 <br>Помните, что на сервере вы не одни, и сервер не может выделять больше ресурсов вам в ущерб другим игрокам.
                 <br></p>
-        </div>
 
-    <!--]-->
+        </div>
+        <h2 id="Изменённые предложения странствующего торговца">Изменённые предложения странствующего торговца</h2>
+        <p>Странствующий торговец помимо своих предложений предлагает головы блоков. Для их приобретения необходим 1 изумруд и определённый блок. Головы, которые добавлены после версии 1.16, продаются только за 1 изумруд.</p>
+        <figure><img alt="Значок менеджера" src="../images/photo_2023-07-12_22-30-08.jpg"><figcaption>Пример новых предложений. Чтобы купить 8 голов подзола, нужно заплатить торговцу изумруд и блок подзола.</figcaption></figure>
+        <!--]-->
     <!--]-->
 </div>
 <script type="module" src="/help/assets/ba90bc10.js" defer></script>
