--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name='robots' content='max-image-preview:large' />
 	<link rel='dns-prefetch' href='//fonts.googleapis.com' />
 	<link rel='dns-prefetch' href='//s.w.org' />
-	<link rel="alternate" type="application/rss+xml" title="Aweizy 1.16 &raquo; Лента" href="https://lava.win/feed/" />
-	<link rel="alternate" type="application/rss+xml" title="Aweizy 1.16 &raquo; Лента комментариев" href="https://lava.win/comments/feed/" />
+	<link rel="alternate" type="application/rss+xml" title="Aweizy 1.16 &raquo; Лента" href="" />
+	<link rel="alternate" type="application/rss+xml" title="Aweizy 1.16 &raquo; Лента комментариев" href="" />
 	<script type="text/javascript">
 		window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/lava.win\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.0.5"}};
 		/*! This file is auto-generated */
